Updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a musician and audio engineer trying to learn web development</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am a colorado Native</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to watch movies, play videogames, work on music and spend time with my wife</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Remote Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Denver Colorado</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I currently work as a entry level backend developer, I want to switch to web dev because of the opportunities it will present me</p>
     </section>
 
     <footer id="footer">
